сделала экран с отправкой запроса на добавление студии

--- a/app/src/main/res/layout/activity_about_developer.xml
+++ b/app/src/main/res/layout/activity_about_developer.xml
@@ -37,7 +37,8 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:paddingTop="20dp"
-                android:text="Мобильное прилоежение для повышения эффективности организации деятельности спортивных студий разработано в рамках ВКР студенткой МИЭТ группы ПИН-41 Макеевой Анастасией"
+                android:text="Мобильное прилоежение для повышения эффективности организации деятельности спортивных студий разработано в рамках ВКР студенткой МИЭТ группы ПИН-41 Макеевой Анастасией\n
+По всем вопросам и предложениям по улучшению работы прилоежения обращаться в телеграмме @nastia_makeeva"
                 android:textAlignment="viewStart"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
